Admin media page fixes (#542)
* bug: make js works

* bug: fix overflowing tags

* bug: improve media page sticky mess

* chore: make the robot overlords happy

--- a/admin/controllers/images/views/show/style.css
+++ b/admin/controllers/images/views/show/style.css
@@ -88,6 +88,21 @@
 	bottom:0;
 	left:0;
 	background:rgba(255,255,255,0.7);
+
+	.image_tags{
+
+		& > .control {
+			max-width: 100%;
+
+			.tag {
+				max-width: 90%;
+				overflow: hidden;
+				display: block;
+				text-overflow: ellipsis;
+				align-content: center;
+			}
+		}
+	}
 }
 .bigger {
 	font-size:120%;
@@ -101,4 +116,23 @@ dialog::backdrop {
 		rgba(0, 0, 0, 0.3) 1px,
 		rgba(0, 0, 0, 0.3) 20px
 	); */
+}
+
+.tags_menu_options {
+	padding: 0.5rem 0;
+	background-color: var(--bulma-body-background-color);
+}
+
+@media only screen and (min-width: 1024px) {
+	.tags_menu_options {
+		position: sticky;
+		top: 4rem;
+		z-index: 2;
+	}
+}
+
+@media only screen and (max-width: 1024px) {
+	h1.title.sticky {
+		position: relative;
+	}
 }
